Removed Java argument XX:MaxPermSize=128M